Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/left_kongguan.html
+++ b/Myerp/Tpl/Chanpin/left_kongguan.html
@@ -25,6 +25,8 @@
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/港澳">&nbsp;<span>港澳</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/东南亚">&nbsp;<span>东南亚</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/欧美岛">&nbsp;<span>欧美岛</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/俄罗斯">&nbsp;<span>俄罗斯</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/越柬">&nbsp;<span>越柬</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/自由人/guojing_copy/境外">&nbsp;<span>自由人</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/包团/guojing_copy/境外">&nbsp;<span>包团</span></a> </li>
           </ul>
