--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -122,6 +122,8 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/港澳/guojing/境外">港澳 </a> </li>
           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/东南亚/guojing/境外">东南亚 </a> </li>
           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/欧美岛/guojing/境外">欧美岛 </a> </li>
+          <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/俄罗斯/guojing/境外">俄罗斯 </a> </li>
+          <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/越柬/guojing/境外">越柬 </a> </li>
           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/自由人/guojing/境外">境外自由人 </a> </li>
           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/包团/guojing/境外">境外包团 </a> </li>
         </ul>
