Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/left_kongguan.html
+++ b/Myerp/Tpl/Chanpin/left_kongguan.html
@@ -55,6 +55,8 @@
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/港澳/bzd_status/未报账">&nbsp;<span>港澳</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/东南亚/bzd_status/未报账">&nbsp;<span>东南亚</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/欧美岛/bzd_status/未报账">&nbsp;<span>欧美岛</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/俄罗斯/bzd_status/未报账">&nbsp;<span>俄罗斯</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/越柬/bzd_status/未报账">&nbsp;<span>越柬</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/自由人/guojing_copy/境外/bzd_status/未报账">&nbsp;<span>自由人</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/包团/guojing_copy/境外/bzd_status/未报账">&nbsp;<span>包团</span></a> </li>
           </ul>
@@ -83,6 +85,8 @@
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/港澳/bzd_status/已报账">&nbsp;<span>港澳</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/东南亚/bzd_status/已报账">&nbsp;<span>东南亚</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/欧美岛/bzd_status/已报账">&nbsp;<span>欧美岛</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/俄罗斯/bzd_status/已报账">&nbsp;<span>俄罗斯</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/越柬/bzd_status/已报账">&nbsp;<span>越柬</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/自由人/guojing_copy/境外/bzd_status/已报账">&nbsp;<span>自由人</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/包团/guojing_copy/境外/bzd_status/已报账">&nbsp;<span>包团</span></a> </li>
           </ul>
@@ -112,6 +116,8 @@
                           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/港澳/guojing_copy/境外">港澳 </a> </li>
                           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/东南亚/guojing_copy/境外">东南亚 </a> </li>
                           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/欧美岛/guojing_copy/境外">欧美岛 </a> </li>
+                          <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/俄罗斯/guojing_copy/境外">俄罗斯 </a> </li>
+                          <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/越柬/guojing_copy/境外">越柬 </a> </li>
                           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/自由人/guojing_copy/境外">境外自由人 </a> </li>
                           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/包团/guojing_copy/境外">境外包团 </a> </li>
                         </ul>
