--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -43,12 +43,15 @@ function exports(type)
 
 function doshenhe_baozhangitem(dotype,datatype,dataID,title){
 	ThinkAjax.myloading('resultdiv');
+	act = jQuery("#btshenhe_"+dataID).attr("onclick"); 
+	jQuery("#btshenhe_"+dataID).attr("onclick","alert('正在执行请稍候...')"); 
 	jQuery.ajax({
 		type:	"POST",
 		url:	SITE_INDEX+"<{$actionmethod}>/doshenhe",
 		data:	"dataID="+dataID+"&dotype="+dotype+"&datatype="+datatype+"&title="+title,
 		success:function(msg){
 			scroll(0,0);
+			jQuery("#btshenhe_"+dataID).attr("onclick","alert("+act+")"); 
 			ThinkAjax.myAjaxResponse(msg,'resultdiv',shenhe_after);
 		}
 	});
@@ -393,31 +396,31 @@ function shenhehistory(chanpinID,obj){
           <PHP>if($v['status_shenhe'] != '批准'){</PHP>style="color:red"<PHP>}</PHP>
           ><{$v['shenhe_remark']}></strong></td>
           <td scope="row" align="left" valign="top"><input class="button" type="button" value="删除" onClick="if(window.confirm('要刪除嗎?')==true)deleteSystemItem(<{$v['chanpinID']}>,'itemlist')" />
-            <input class="button" type="button" value="修改" onClick="if(CheckForm('form_yingshou','resultdiv_2'))save(<{$v['chanpinID']}>,'itemlist<{$v[chanpinID]}>');"/>
+            <input class="button" type="button" id="btsave_<{$v['chanpinID']}>" value="修改" onClick="if(CheckForm('form_yingshou','resultdiv_2'))save(<{$v['chanpinID']}>,'itemlist<{$v[chanpinID]}>');"/>
   
       <php>
       $taskom = A("Method")->_checkOMTaskShenhe($v['chanpinID'],'报账项');
       if(false !== $taskom){
       if(cookie('show_action') == '批准'){
       </php>
-      <input type="button" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('检出','报账项',<{$v['chanpinID']}>,'<{$v['title']}>');">
+      <input type="button" value=" <php>echo cookie('show_word');</php> " id="btshenhe_<{$v['chanpinID']}>" onclick="doshenhe_baozhangitem('检出','报账项',<{$v['chanpinID']}>,'<{$v['title']}>');">
       <php>}if(cookie('show_action') == '申请'){
       </php>
-      <input type="button" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('申请','报账项',<{$v['chanpinID']}>,'<{$v['title']}>');">
+      <input type="button" value=" <php>echo cookie('show_word');</php> " id="btshenhe_<{$v['chanpinID']}>" onclick="doshenhe_baozhangitem('申请','报账项',<{$v['chanpinID']}>,'<{$v['title']}>');">
       <php>}}else{</php>
       <php>if(count(explode('未审核',$v['shenhe_remark'])) > 1) $alterword = '计调未申请审核！！！';</php>
       <php>if(count(explode('申请',$v['shenhe_remark'])) > 1) $alterword = '经理未审核！！！';</php>
       <php>if(count(explode('财务',$v['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
-      <input type="button" value="审核" name="button" onclick="alert('<{$alterword}>')" >
+      <input type="button" value="审核" onclick="alert('<{$alterword}>')" >
       <php>}if(A("Method")->checkshenheback($v['chanpinID'],'报账项')){</php>
-      <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$v['chanpinID']}>,'报账项','<{$actionmethod}>');">
+      <input type="button" value=" 审核回退 " onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$v['chanpinID']}>,'报账项','<{$actionmethod}>');">
 	  <php>}else{</php>
           <php>if($baozhang['status_shenhe'] == '批准'){</php>
-      <input type="button" value="回退" name="button" onclick="alert('报账单已经审核，无法回退报账项！')" >
+      <input type="button" value="回退" onclick="alert('报账单已经审核，无法回退报账项！')" >
           <php>}elseif($v['status_shenhe'] == '批准'){</php>
-      <input type="button" value="回退" name="button" onclick="alert('该项目已被批准，只有最后批准人允许回退！！！')" >
+      <input type="button" value="回退" onclick="alert('该项目已被批准，只有最后批准人允许回退！！！')" >
           <php>}else{</php>
-      <input type="button" value="回退" name="button" onclick="alert('只有计调权限和没有申请的时候才能回退！')" >
+      <input type="button" value="回退" onclick="alert('只有计调权限和没有申请的时候才能回退！')" >
           <php>}</php>
 	  <php>}</php>
       
@@ -482,30 +485,30 @@ function shenhehistory(chanpinID,obj){
           <PHP>if($v['status_shenhe'] != '批准'){</PHP>style="color:red"<PHP>}</PHP>
           ><{$v['shenhe_remark']}></strong></td>
           <td scope="row" align="left" valign="top"><input class="button" type="button" value="删除" onClick="if(window.confirm('要刪除嗎?')==true)deleteSystemItem(<{$v['chanpinID']}>,'itemlist')" />
-            <input class="button" type="button" value="修改" onClick="if(CheckForm('form_yingshou','resultdiv_2'))save(<{$v['chanpinID']}>,'itemlist<{$v[chanpinID]}>');"/>
+            <input class="button" type="button" id="btsave_<{$v['chanpinID']}>" value="修改" onClick="if(CheckForm('form_yingshou','resultdiv_2'))save(<{$v['chanpinID']}>,'itemlist<{$v[chanpinID]}>');"/>
       <php>
       $taskom = A("Method")->_checkOMTaskShenhe($v['chanpinID'],'报账项');
       if(false !== $taskom){
       if(cookie('show_action') == '批准'){
       </php>
-      <input type="button" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('检出','报账项',<{$v['chanpinID']}>,'<{$v['title']}>');">
+      <input type="button" value=" <php>echo cookie('show_word');</php> " id="btshenhe_<{$v['chanpinID']}>" onclick="doshenhe_baozhangitem('检出','报账项',<{$v['chanpinID']}>,'<{$v['title']}>');">
       <php>}if(cookie('show_action') == '申请'){
       </php>
-      <input type="button" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('申请','报账项',<{$v['chanpinID']}>,'<{$v['title']}>');">
+      <input type="button" value=" <php>echo cookie('show_word');</php> " id="btshenhe_<{$v['chanpinID']}>" onclick="doshenhe_baozhangitem('申请','报账项',<{$v['chanpinID']}>,'<{$v['title']}>');">
       <php>}}else{</php>
       <php>if(count(explode('未审核',$v['shenhe_remark'])) > 1) $alterword = '计调未申请审核！！！';</php>
       <php>if(count(explode('申请',$v['shenhe_remark'])) > 1) $alterword = '经理未审核！！！';</php>
       <php>if(count(explode('财务',$v['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
-      <input type="button" value="审核" name="button" onclick="alert('<{$alterword}>')" >
+      <input type="button" value="审核" onclick="alert('<{$alterword}>')" >
       <php>}if(A("Method")->checkshenheback($v['chanpinID'],'报账项')){</php>
-      <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$v['chanpinID']}>,'报账项','<{$actionmethod}>');">
+      <input type="button" value=" 审核回退 " onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$v['chanpinID']}>,'报账项','<{$actionmethod}>');">
 	  <php>}else{</php>
           <php>if($baozhang['status_shenhe'] == '批准'){</php>
-      <input type="button" value="回退" name="button" onclick="alert('报账单已经审核，无法回退报账项！')" >
+      <input type="button" value="回退" onclick="alert('报账单已经审核，无法回退报账项！')" >
           <php>}elseif($v['status_shenhe'] == '批准'){</php>
-      <input type="button" value="回退" name="button" onclick="alert('该项目已被批准，只有最后批准人允许回退！！！')" >
+      <input type="button" value="回退" onclick="alert('该项目已被批准，只有最后批准人允许回退！！！')" >
           <php>}else{</php>
-      <input type="button" value="回退" name="button" onclick="alert('只有计调权限和没有申请的时候才能回退！')" >
+      <input type="button" value="回退" onclick="alert('只有计调权限和没有申请的时候才能回退！')" >
           <php>}</php>
 	  <php>}</php>
       
@@ -567,7 +570,7 @@ function shenhehistory(chanpinID,obj){
           <td scope="row" align="left" valign="top"><input type="text" name="remark" id="remark<{$v['chanpinID']}>" value="<{$v['remark']}>"></td>
           <td scope="row" align="left" valign="top"></td>
           <td scope="row" align="left" valign="top"><input class="button" type="button" value="删除" onClick="if(window.confirm('要刪除嗎?')==true)deleteSystemItem(<{$v['chanpinID']}>,'itemlist')" />
-            <input class="button" type="button" value="修改" onClick="if(CheckForm('form_yingshou','resultdiv_2'))save(<{$v['chanpinID']}>,'itemlist<{$v[chanpinID]}>');"/>
+            <input class="button" type="button" id="btsave_<{$v['chanpinID']}>" value="修改" onClick="if(CheckForm('form_yingshou','resultdiv_2'))save(<{$v['chanpinID']}>,'itemlist<{$v[chanpinID]}>');"/>
           <td scope="row" align="left" valign="top"><input type="checkbox" 
             <php>if($v['is_print'] =='不打印'){</php>
             checked="checked"
