--- a/Myerp/Tpl/Dijie/header_chanpin.html
+++ b/Myerp/Tpl/Dijie/header_chanpin.html
@@ -93,7 +93,6 @@ function shenhe_after(data,status){
 <div id="resultdiv" class="resultdiv"></div>
 <div id="resultdiv_2" class="resultdiv"></div>
 <div class="buttons">
-  <input type="button" value="审核记录" name="button" class="button primary" style="float:right">
   <php>if('单项服务' != $markpos && '团队报账单' != $markpos){</php>
       <php>
       $taskom = A("Method")->_checkOMTaskShenhe($chanpinID,'地接');
@@ -169,6 +168,10 @@ function shenhe_after(data,status){
       <php>}if(A("Method")->checkshenheback($baozhangID,'报账单')){</php>
       <input type="button" style="float:right" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$baozhangID}>,'报账单','Dijie');">
 	  <php>}</php>
+      <input type="button" style="float:right" value=" 记录 " name="button" onclick="shenhehistory(<{$baozhang['chanpinID']}>,this);">
+      
+      <label style="float:right; margin:2px 4px 0 0; font-size:12px"> | 审核流程：<strong><{$tem_cp['shenhe_remark']}></strong></label>
+      <label style="float:right; margin:2px 4px 0 0; font-size:12px">| 锁状态：<strong><{$tem_cp['islock']}></strong></label>
   <php>}</php>
   <php>if('应收及应付' == $markpos){</php>
   <input type="button" value=" 添加应收项目 " name="button" class="button primary" id="yingshuo_create">
