--- a/Myerp/Tpl/SetSystem/index.html
+++ b/Myerp/Tpl/SetSystem/index.html
@@ -111,7 +111,7 @@
         <tr>
           <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/Backups.gif">&nbsp;<a href="javascript:void(0)" id="pingyi_create">产品平移</a></td>
           <td width="30%">产品平移</td>
-          <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/icon_email_check.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/">部门数据平移</a></td>
+          <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/icon_email_check.gif">&nbsp;<a href="#" onclick="if(window.confirm('确认重置？')==true)resetOM()">联合体OM重置</a></td>
           <td width="30%">部门数据平移</td>
         </tr>
       </tbody>
@@ -185,6 +185,17 @@ jQuery().ready(function() {
 		   }
 		})
 }
+function resetOM(){
+	jQuery.ajax({
+		type:	"POST",
+		url:	"<{:SITE_INDEX}>SetSystem/resetOM",
+		data:	"",
+		success:function(msg){
+			ThinkAjax.myAjaxResponse(msg,'resultdiv');
+		}
+	});
+}
+
 </script>
 
 
