--- a/Myerp/Tpl/Chanpin/index.html
+++ b/Myerp/Tpl/Chanpin/index.html
@@ -19,6 +19,7 @@
                     <input class="button" type="button" value=" 复制 " onclick="copytonew()">
                     <input class="button" type="button" value=" 截止/报名 " onclick="jiezhiorbaoming()">
                     <input class="button" type="button" value=" 重置OM " onclick="resetOM()">
+                    <input class="button" type="button" value=" 删除到回收站 " onclick="deletetohsz()">
                   <td nowrap="nowrap" align="right" class="paginationChangeButtons" style="color:#090"><{$page}></td>
                 </tr>
               </tbody>
@@ -129,6 +130,34 @@ function copytonew()
 		}
 	});
 }
+
+function deletetohsz()
+{
+	var checkboxitem = new Array();
+	var i = 0;
+	jQuery(".checkboxitem").each(function(index, element) {
+		if(jQuery(this).attr("checked")){
+			checkboxitem[i] = jQuery(this).attr('value');
+			i++;
+		}
+	});
+	if(checkboxitem == ''){
+		ajaxalert('至少选择1项进行操作！');
+		return;
+	}
+	jQuery.ajax({
+		type:	"POST",
+		url:	"<{:SITE_INDEX}>Chanpin/copytonew",
+		data:	"checkboxitem="+checkboxitem,
+		success:function(msg){
+			ThinkAjax.myAjaxResponse(msg,'resultdiv',save_after);
+		}
+	});
+}
+
+
+
+
 function save_after(data,status){
 	if(status == 1){
 		location.reload();
