Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/index.html
+++ b/Myerp/Tpl/Chanpin/index.html
@@ -147,7 +147,7 @@ function deletetohsz()
 	}
 	jQuery.ajax({
 		type:	"POST",
-		url:	"<{:SITE_INDEX}>Chanpin/copytonew",
+		url:	"<{:SITE_INDEX}>Chanpin/deletechanpin/typevalue/线路",
 		data:	"checkboxitem="+checkboxitem,
 		success:function(msg){
 			ThinkAjax.myAjaxResponse(msg,'resultdiv',save_after);
