Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/zituanxiangmu.html
+++ b/Myerp/Tpl/Chanpin/zituanxiangmu.html
@@ -135,10 +135,16 @@
     <table cellspacing="1" cellpadding="0" border="0" width="100%" class="edit view">
       <tbody>
         <tr>
+          <td valign="top" scope="row" style="width:80px;"> 类型: </td>
+          <td valign="top" scope="row"><strong><span id="type_shuoming"></span></strong></td>
+          <td valign="top" scope="row" style="width:80px;"></td>
+          <td valign="top" scope="row"></td>
+        </tr>
+        <tr>
           <td valign="top" scope="row" style="width:80px;"> 标题: </td>
           <td valign="top" scope="row"><input name="title" id="title" type="text" style="width:100%" check="^\S+$" warning="标题不能为空,且不能含有空格" ></td>
-          <td valign="top" scope="row" style="width:80px;"> 类型: </td>
-          <td valign="top" scope="row"><span id="type_shuoming"></span></td>
+          <td valign="top" scope="row" style="width:80px;"> 人数: </td>
+          <td valign="top" scope="row"><input name="value" type="text" id="value" value="0" check="^\S+$" warning="人数不能为空,且不能含有空格" ></td>
         </tr>
         <tr>
           <td valign="top" scope="row" style="width:80px;"> 金额: </td>
