Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Xiaoshou/zituan.html
+++ b/Myerp/Tpl/Xiaoshou/zituan.html
@@ -97,7 +97,7 @@ $(function(){
               <a href="<{:SITE_INDEX}>Xiaoshou/zituanbaoming/chanpinID/<{$chanpinID}>"></a>
           <php>}</php>
       <php>}else{</php>
-      <a href="javascript:alert('报名截止!');"></a>
+      <a href="javascript:alert('报名截止!请补订订单！');"></a>
       <php>}</php>
       </u> </em> </dd>
   </dl>
