--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -28,6 +28,23 @@ function dosetprint(ele,id,p_id)
 	});
 }
 
+function doeditremark(ele,id,p_id)
+{
+	var remark = jQuery("#remark"+id).val();
+	jQuery.ajax({
+		type:	"POST",
+		url:	SITE_INDEX+"<{$actionmethod}>/dopost_baozhangitem/dotype/editremark",
+		data:	"chanpinID="+id+"&parentID="+p_id+"&remark="+remark,
+		success:	function(msg){
+			  ThinkAjax.myAjaxResponse(msg,'resultdiv');
+		  }
+	});
+}
+
+
+
+
+
 function doprint(type){
 	var url = SITE_INDEX+'<{$actionmethod}>/zituanbaozhang/doprint/'+type+'/chanpinID/<{$chanpinID}>/baozhangID/<{$baozhangID}>';
     //window.open(url,'_blank',"height=500,width=1000,status=yes,toolbar=no,menubar=no,location=no");
@@ -400,7 +417,10 @@ function shenhehistory(chanpinID,obj){
               <option value="月结">月结</option>
             </select></td>
           <td scope="row" align="left" valign="top"><input type="text" name="renshu" style="width:80px;" id="renshu<{$v['chanpinID']}>" value="<php>if($v['renshu']) echo $v['renshu']; else echo 0;</php>" check="^\S+$" warning="人数不能为空,且不能含有空格" ></td>
-          <td scope="row" align="left" valign="top"><input type="text" name="remark" id="remark<{$v['chanpinID']}>" value="<{$v['remark']}>"></td>
+          <td scope="row" align="left" valign="top">
+          <input type="text" name="remark" id="remark<{$v['chanpinID']}>" value="<{$v['remark']}>">
+          <input class="button" type="button" value="修改备注"  style="margin-top:0px;" onclick="javascript:doeditremark(this,<{$v['chanpinID']}>,<{$v[parentID]}>);"/>
+          </td>
           <td scope="row" align="left" valign="top"><strong 
           <PHP>if($v['status_shenhe'] != '批准'){</PHP>style="color:red"<PHP>}</PHP>
           ><{$v['shenhe_remark']}></strong></td>
@@ -491,7 +511,10 @@ function shenhehistory(chanpinID,obj){
               <option value="月结">月结</option>
             </select></td>
           <td scope="row" align="left" valign="top"><input type="text" name="renshu" style="width:80px;" id="renshu<{$v['chanpinID']}>" value="<php>if($v['renshu']) echo $v['renshu']; else echo 0;</php>" check="^\S+$" warning="人数不能为空,且不能含有空格" ></td>
-          <td scope="row" align="left" valign="top"><input type="text" name="remark" id="remark<{$v['chanpinID']}>" value="<{$v['remark']}>"></td>
+          <td scope="row" align="left" valign="top">
+          <input type="text" name="remark" id="remark<{$v['chanpinID']}>" value="<{$v['remark']}>">
+          <input class="button" type="button" value="修改备注"  style="margin-top:0px;" onclick="javascript:doeditremark(this,<{$v['chanpinID']}>,<{$v[parentID]}>);"/>
+          </td>
           <td scope="row" align="left" valign="top"><strong 
           <PHP>if($v['status_shenhe'] != '批准'){</PHP>style="color:red"<PHP>}</PHP>
           ><{$v['shenhe_remark']}></strong></td>
