--- a/Myerp/Tpl/SetSystem/OMindex.html
+++ b/Myerp/Tpl/SetSystem/OMindex.html
@@ -25,6 +25,8 @@
         <tr>
           <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/icon_email_mark.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/systemOM/datatype/报账单">报账单</a></td>
           <td width="30%">报账单的开放与管理</td>
+          <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/icon_email_mark.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/systemOM/datatype/订单">订单</a></td>
+          <td width="30%">订单</td>
         </tr>
       </tbody>
     </table>
