Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -97,7 +97,7 @@
     <php>if($baozhang['datatext']['retitle']){</php>
       <td width="25%">&nbsp;线路：<{$baozhang['datatext']['retitle']}></td>
     <php>}else{</php>
-      <td width="25%">&nbsp;线路：<{$djtuan['title_copy']}></td>
+      <td width="25%">&nbsp;线路：<{$djtuan['title']}></td>
     <php>}</php>
       <td>&nbsp;出团日期：<{$djtuan['jietuantime']}></td>
       <td>&nbsp;回团日期：
