Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/zituanxiangmu.html
+++ b/Myerp/Tpl/Chanpin/zituanxiangmu.html
@@ -201,6 +201,7 @@ jQuery(document).ready(function(){
 		jQuery('#value').val('');
 		jQuery('#method').val('现金');
 		jQuery('#remark').val('');
+		jQuery('#renshu').val('');
 		jQuery('#chanpinID').val('');
 		jQuery('#type_shuoming').html('应收费用');
 		jQuery('#type').val('结算项目');
@@ -214,6 +215,7 @@ jQuery(document).ready(function(){
 		jQuery('#value').val('');
 		jQuery('#method').val('现金');
 		jQuery('#remark').val('');
+		jQuery('#renshu').val('');
 		jQuery('#chanpinID').val('');
 		jQuery('#type_shuoming').html('应付费用');
 		jQuery('#type').val('支出项目');
@@ -254,6 +256,7 @@ function showinfo(itemID){
 		jQuery('#value').val(data['value']);
 		jQuery('#method').val(data['method']);
 		jQuery('#remark').val(data['remark']);
+		jQuery('#renshu').val(data['renshu']);
 		jQuery('#chanpinID').val(data['chanpinID']);
 		jQuery('#dialog_item').dialog('open');
 	}
