--- a/Myerp/Tpl/Dijie/djtuanxiangmu.html
+++ b/Myerp/Tpl/Dijie/djtuanxiangmu.html
@@ -15,6 +15,7 @@
       <tbody>
         <tr height="20">
           <th scope="col" nowrap="nowrap" style="min-width:200px;width:200px;"><div style=" background:#4E8CCF; color:#FFF"> 标题 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:100px;width:100px;"><div> 人数 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;width:100px;"><div> 金额 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;width:100px;"><div> 方式 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:200px;"><div> 备注说明 </div></th>
@@ -24,6 +25,7 @@
         <php>foreach($baozhanglist as $vol){ if($vol['type'] != '结算项目') continue;</php>
           <tr height="40" class="evenListRowS1">
             <td scope="row" align="left" valign="top"><{$vol['title']}></td>
+            <td scope="row" align="left" valign="top"><{$vol['renshu']}></td>
             <td scope="row" align="left" valign="top"><{$vol['value']}></td>
             <td scope="row" align="left" valign="top"><{$vol['method']}></td>
             <td scope="row" align="left" valign="top"><{$vol['remark']}></td>
@@ -74,6 +76,7 @@
       <tbody>
         <tr height="20">
           <th scope="col" nowrap="nowrap" style="min-width:200px;width:200px;"><div style=" background:#4E8CCF; color:#FFF"> 标题 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:100px;width:100px;"><div> 人数 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;width:100px;"><div> 金额 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;width:100px;"><div> 方式 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:200px;"><div> 备注说明 </div></th>
@@ -83,6 +86,7 @@
         <php>foreach($baozhanglist as $vol){ if($vol['type'] != '支出项目') continue;</php>
           <tr height="40" class="evenListRowS1">
             <td scope="row" align="left" valign="top"><{$vol['title']}></td>
+            <td scope="row" align="left" valign="top"><{$vol['renshu']}></td>
             <td scope="row" align="left" valign="top"><{$vol['value']}></td>
             <td scope="row" align="left" valign="top"><{$vol['method']}></td>
             <td scope="row" align="left" valign="top"><{$vol['remark']}></td>
@@ -134,10 +138,16 @@
     <table cellspacing="1" cellpadding="0" border="0" width="100%" class="edit view">
       <tbody>
         <tr>
+          <td valign="top" scope="row" style="width:80px;"> 类型: </td>
+          <td valign="top" scope="row"><strong><span id="type_shuoming"></span></strong></td>
+          <td valign="top" scope="row" style="width:80px;"></td>
+          <td valign="top" scope="row"></td>
+        </tr>
+        <tr>
           <td valign="top" scope="row" style="width:80px;"> 标题: </td>
           <td valign="top" scope="row"><input name="title" id="title" type="text" style="width:100%" check="^\S+$" warning="标题不能为空,且不能含有空格" ></td>
-          <td valign="top" scope="row" style="width:80px;"> 类型: </td>
-          <td valign="top" scope="row"><span id="type_shuoming"></span></td>
+          <td valign="top" scope="row" style="width:80px;"> 人数: </td>
+          <td valign="top" scope="row"><input name="renshu" type="text" id="renshu" value="0" check="^\S+$" warning="人数不能为空,且不能含有空格" ></td>
         </tr>
         <tr>
           <td valign="top" scope="row" style="width:80px;"> 金额: </td>
@@ -197,6 +207,7 @@ jQuery(document).ready(function(){
 		jQuery('#value').val('');
 		jQuery('#method').val('现金');
 		jQuery('#remark').val('');
+		jQuery('#renshu').val('');
 		jQuery('#chanpinID').val('');
 		jQuery('#type_shuoming').html('应收费用');
 		jQuery('#type').val('结算项目');
@@ -210,6 +221,7 @@ jQuery(document).ready(function(){
 		jQuery('#value').val('');
 		jQuery('#method').val('现金');
 		jQuery('#remark').val('');
+		jQuery('#renshu').val('');
 		jQuery('#chanpinID').val('');
 		jQuery('#type_shuoming').html('应付费用');
 		jQuery('#type').val('支出项目');
@@ -249,6 +261,7 @@ function showinfo(itemID){
 		jQuery('#value').val(data['value']);
 		jQuery('#method').val(data['method']);
 		jQuery('#remark').val(data['remark']);
+		jQuery('#renshu').val(data['renshu']);
 		jQuery('#chanpinID').val(data['chanpinID']);
 		jQuery('#dialog_item').dialog('open');
 	}
