Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/customerlist_1.html
+++ b/Myerp/Tpl/Index/customerlist_1.html
@@ -45,7 +45,7 @@
   foreach($cusall as $v){ if($v['level'] == '8000'){$counter++;
     </php>
   <tr>
-    <td class="xxxx" height="27" align="center"><{$v[$counter]}> </td>
+    <td class="xxxx" height="27" align="center"><{$counter}> </td>
     <td class="xxxx" height="27" align="center"><{$v[vol]['name']}> </td>
     <td class="xxxx" height="27" align="center"><{$v[vol]['sex']}> </td>
     <td class="xxxx" height="27" align="center"><{$v[vol]['manorchild']}> </td>
@@ -84,7 +84,7 @@
   foreach($cusall as $v){ if($v['level'] == '15000_a'){$counter++;
     </php>
   <tr>
-    <td class="xxxx" height="27" align="center"><{$v[$counter]}> </td>
+    <td class="xxxx" height="27" align="center"><{$counter}> </td>
     <td class="xxxx" height="27" align="center"><{$v[vol]['name']}> </td>
     <td class="xxxx" height="27" align="center"><{$v[vol]['sex']}> </td>
     <td class="xxxx" height="27" align="center"><{$v[vol]['manorchild']}> </td>
@@ -123,7 +123,7 @@
   foreach($cusall as $v){ if($v['level'] == '15000_b'){$counter++;
     </php>
   <tr>
-    <td class="xxxx" height="27" align="center"><{$v[$counter]}> </td>
+    <td class="xxxx" height="27" align="center"><{$counter}> </td>
     <td class="xxxx" height="27" align="center"><{$v[vol]['name']}> </td>
     <td class="xxxx" height="27" align="center"><{$v[vol]['sex']}> </td>
     <td class="xxxx" height="27" align="center"><{$v[vol]['manorchild']}> </td>
@@ -162,7 +162,7 @@
   foreach($cusall as $v){ if($v['level'] == '30000'){$counter++;
     </php>
   <tr>
-    <td class="xxxx" height="27" align="center"><{$v[$counter]}> </td>
+    <td class="xxxx" height="27" align="center"><{$counter}> </td>
     <td class="xxxx" height="27" align="center"><{$v[vol]['name']}> </td>
     <td class="xxxx" height="27" align="center"><{$v[vol]['sex']}> </td>
     <td class="xxxx" height="27" align="center"><{$v[vol]['manorchild']}> </td>
